Fixed overflown bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -103,6 +103,7 @@ body {
     rgba(0, 5, 13, 0) 49.93%
   );
   position: relative;
+  overflow-x: hidden;
 }
 .main-images ul {
   display: flex;
@@ -204,7 +205,7 @@ body {
 }
 
 .main-images-title img {
-  height: 70%;
+  height: 40%;
   width: 100%;
   object-fit: contain;
 }
